--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "lucide-react": "^0.563.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.30.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
